Adding new images and styling fixed

--- a/index.html
+++ b/index.html
@@ -425,6 +425,7 @@
             width:100%;
             z-index: 100;
             background: #fff;
+            background: #fff;
         }
         .top-nav .logo{
                 background: #3f8ddd;
@@ -524,6 +525,16 @@
             padding:15px;
             color: #707070
         }
+        .specification p{
+            font-size: 13px;
+        }
+
+        .specification li{
+            margin-top: 8px;
+            padding-left: 12px;
+            line-height: 1.2;
+            font-size: 13px;
+        }
 
 
 
@@ -561,7 +572,7 @@
         </div>
         <div class="row main-bg-color justify-content-center">
             <div class="col-11 pt-5 pb-5">
-                <pre class="desc-box d-flex justify-conten-center align-items-center text-center ">
+                <pre class="desc-box d-flex justify-conten-center align-items-center text-center mb-0">
                     「リモートワーク、まずはWeb会議から始めたい」「セキュリティも万全に」
                      そんな企業様に おススメなのがMicrosoft Teams。リモートワークの最初の一歩、いますぐ安全に Web 会議を始められます。</pre>
             </div>
@@ -605,7 +616,7 @@
             <div class="main-title text-center w-100">
                 リモートワークに最適なレノボPC
             </div>
-            <article class="container">
+            <article class="container pl-5 pr-5">
                 <div class="row">
                     <div class="col-12">
                         <div class="article-title">
@@ -620,7 +631,7 @@
                         <img class="image-contain" src="./img/think-pad.jpeg" alt="">
                     </div>
                     <div class="col-6">
-                        <ul>
+                        <ul class="ml-3">
                             <li>米沢生産モデル（最短5営業日で納品） 選択可能 </li>
                             <li>プロセッサー：インテル Core i7-10710U プロセッサー (1.10GHz, 12MB) 選択可能 </li>
                             <li>初期導入OS：Windows 10 Pro 64 bit 選択可能</li>
