Adding new section

--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
         }
         .main-title{
             font-size: 34px;
-            padding:45px 0;
+            padding:60px 0;
         }
         article .article-title{
             border-left:4px solid #E2221B;
@@ -534,6 +534,17 @@
             padding-left: 12px;
             line-height: 1.2;
             font-size: 13px;
+        }
+
+        .middle-img-sec {
+            padding: 90px 0;
+        }
+
+        .middle-img {
+            background-image: url("./img/middle-background.png");
+            background-size: cover;
+            height: 300px;
+            width:100%;
         }
 
 
@@ -619,7 +630,7 @@
             <article class="container pl-5 pr-5">
                 <div class="row">
                     <div class="col-12">
-                        <div class="article-title">
+                        <div class="article-title mb-4">
                             <h5 class="sub-title">14型薄型軽量フラッグシップノート</h5>
                             <h2 class="title">ThinkPad X1 Carbon Gen 8</h2>
                         </div>
@@ -657,6 +668,9 @@
                     </div>
                 </div>
             </article>
+        </div>
+        <div class="row main-bg-color middle-img-sec justify-content-center">
+            <div class="middle-img"></div>
         </div>
     </div>
 </div>
