Lenovo group section created

--- a/index.html
+++ b/index.html
@@ -442,6 +442,10 @@
             color:#707070
         }
 
+        h2{
+            font-size: 28px;
+        }
+
         /* Fixed Cover */
         .bg-cover{
             background-image: url("./img/top-background.png");
@@ -499,7 +503,7 @@
             color: #707070;
         }
         .main-title{
-            font-size: 34px;
+            font-size: 32px;
             padding:60px 0;
         }
         article .article-title{
@@ -512,8 +516,6 @@
             font-size: 15px;
         }
 
-        article .article-title .title{
-        }
         article ul{
             list-style: disc inside;
             color: #707070;
@@ -545,6 +547,39 @@
             background-size: cover;
             height: 300px;
             width:100%;
+        }
+
+        .article-title{
+            border-left:4px solid #E2221B;
+            padding-left:15px;
+        }
+
+        .sub-title-content {
+            font-size: 15px;
+            color: #343A40;
+        }
+
+        .lenovo-pc{
+            width: 90%;
+            height: 100%;
+            object-fit: contain;
+        }
+        .group-img{
+            width: 100%;
+            object-fit: contain;
+        }
+
+        .lenovo-pc-group h3{
+            font-size: 13px;
+            color: #707070;
+            text-align: center;
+            padding-top: 25px;
+        }
+
+        .lenovo-pc-group p{
+            font-size: 13px;
+            color: #343A40;
+            padding-top: 5px;
         }
 
 
@@ -629,7 +664,7 @@
             </div>
             <article class="container pl-5 pr-5">
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-12 pl-4">
                         <div class="article-title mb-4">
                             <h5 class="sub-title">14型薄型軽量フラッグシップノート</h5>
                             <h2 class="title">ThinkPad X1 Carbon Gen 8</h2>
@@ -671,6 +706,69 @@
         </div>
         <div class="row main-bg-color middle-img-sec justify-content-center">
             <div class="middle-img"></div>
+        </div>
+        <div class="row main-bg-color pl-5 pr-5 pb-5">
+                <div class="col-12 pb-5">
+                    <div class="article-title mb-4">
+                        <h2 class="title">Lenovo PCとセットになったリモートワーク機能</h2>
+                    </div>
+                    <p class="sub-title-content pt-4">遠隔でも、社員とのコミュニケーションをはじめ情報共有や会議、取引先との商談など<br> 業務のキホンをオフィスと同じように安全・快適に行えます。                    </p>
+                </div>
+            <div class="col-6 pb-5">
+                <img class="lenovo-pc" src="./img/lenovo-pc.png" alt="">
+            </div>
+            <div class="col-6 pb-5">
+
+            </div>
+            <div class="lenovo-pc-group col-3 pt-3">
+                <img class="group-img" src="./img/pc-1.png" alt="">
+                <h3>高品質で安全</h3>
+                <p>すべての会議のセキュリティーが確保され、質の高い音声・ビデオ・画面共有が利用できます。</p>
+            </div>
+            <div class="lenovo-pc-group col-3 pt-3">
+                <img class="group-img" src="./img/pc-2.png" alt="">
+                <h3>リアルタイム共有</h3>
+                <p>ドキュメントや画面の共有で普段と変わりなくプレゼンも商談も行えます</p>
+            </div>
+            <div class="lenovo-pc-group col-3 pt-3">
+                <img class="group-img" src="./img/pc-3.png" alt="">
+                <h3>会議中でもチャットで確認</h3>
+                <p>チャットと一体化になったWeb会議ツールです。</p>
+            </div>
+            <div class="lenovo-pc-group col-3 pt-3">
+                <img class="group-img" src="./img/pc-4.png" alt="">
+                <h3>議事録作成もラクラク</h3>
+                <p>会議の共有を簡単に行えます</p>
+            </div>
+        </div>
+        <div class="row main-bg-color pl-5 pr-5">
+            <div class="col-12 pb-4">
+                <div class="article-title mb-4">
+                    <h2 class="title">Lenovo PCに追加できるリモートワーク機能</h2>
+                </div>
+                <p class="sub-title-content pt-4">テレワークが進むにつれて顕在化されやすい「社内の情報共有」「リモートマネジメント」「組織の一体感」<br>
+                    などの課題を解決する、Microsoft365 と連携したクラウドサービスが追加できます。</p>
+            </div>
+            <div class="lenovo-pc-group col-3 pt-1">
+                <img class="group-img" src="./img/remote-1.png" alt="">
+                <h3>社内情報に素早くアクセス</h3>
+                <p>日々業務するTeamsから、素早く必要な社内情報にアクセスできます。</p>
+            </div>
+            <div class="lenovo-pc-group col-3 pt-1">
+                <img class="group-img" src="./img/remote-2.png" alt="">
+                <h3>勤怠管理</h3>
+                <p>PCとタイムシートが連動。 入力の手間ゼロのリモートマネジメントを可能にします。</p>
+            </div>
+            <div class="lenovo-pc-group col-3 pt-1">
+                <img class="group-img" src="./img/remote-3.png" alt="">
+                <h3>チームのコラボを可視化</h3>
+                <p>「誰と誰が連携できているか」可視化でチーム力を向上できます。</p>
+            </div>
+            <div class="lenovo-pc-group col-3 pt-1">
+                <img class="group-img" src="./img/remote-4.png" alt="">
+                <h3>社内報</h3>
+                <p>会社のイマを伝えるデジタル社内報は組織の一体感を醸成します。</p>
+            </div>
         </div>
     </div>
 </div>
