Few styling changes

--- a/index.html
+++ b/index.html
@@ -431,8 +431,11 @@
             background: #fff;
         }
         .top-nav .logo{
-                background: #3f8ddd;
-            height: 40px;
+            background: #3f8ddd;
+            height: 41px;
+        }
+        .logo img {
+            width: 90%;
         }
         .top-nav .nav-items{
             width:100%;
@@ -575,6 +578,10 @@
             object-fit: contain;
         }
 
+        .lenovo-pc-group {
+            padding-right: 5px;
+        }
+
         .lenovo-pc-group h3{
             font-size: 13px;
             color: #707070;
@@ -658,7 +665,7 @@
                 <div class="text-center pt-5">
                     <h2 class="header-title"> 中堅・中小企業様のリモートワークを応援！</h2>
                     <img class="header-group-img mt-4 mb-4" src="./img/Groups.png" alt="">
-                    <p class="px-5">Microsoft 365 に Web 会議をすぐに始められる 「リモートワーク スターター プラン」登場</p>
+                    <p class="px-5">Microsoft 365 に Web 会議をすぐに始められる <br>「リモートワーク スターター プラン」登場</p>
                 </div>
             </div>
             <div class="col-6 p-0">
@@ -802,8 +809,8 @@
                 <table class="w-100">
                     <tr>
                         <td>「Microsoft Teams」と「OneDrive for Business」を含む <br> ​Microsoft 365 の中堅・中小企業向け新プラン</td>
-                        <td>  1ユーザーあたり月額399円（税込み） <br>
-                            ユーザー数 ユーザー数</td>
+                        <td style="text-align: left">1ユーザーあたり月額399円（税込み）<br>
+                            ユーザー数 &nbsp; &nbsp; &nbsp; &nbsp;300ユーザーまで</td>
                     </tr>
                 </table>
             </div>
@@ -819,22 +826,22 @@
             <div class="lenovo-pc-group col-3 pt-1">
                 <img class="group-img" src="./img/remote-1.png" alt="">
                 <h3>社内情報に素早くアクセス</h3>
-                <p>日々業務するTeamsから、素早く必要な社内情報にアクセスできます。</p>
+                <p>日々業務するTeamsから、素早く必要<br>な社内情報にアクセスできます。</p>
             </div>
             <div class="lenovo-pc-group col-3 pt-1">
                 <img class="group-img" src="./img/remote-2.png" alt="">
                 <h3>勤怠管理</h3>
-                <p>PCとタイムシートが連動。 入力の手間ゼロのリモートマネジメントを可能にします。</p>
+                <p>PCとタイムシートが連動。 <br>入力の手間ゼロのリモートマネジメント<br>を可能にします。</p>
             </div>
             <div class="lenovo-pc-group col-3 pt-1">
                 <img class="group-img" src="./img/remote-3.png" alt="">
                 <h3>チームのコラボを可視化</h3>
-                <p>「誰と誰が連携できているか」可視化でチーム力を向上できます。</p>
+                <p>「誰と誰が連携できているか」可視化で<br>チーム力を向上できます。</p>
             </div>
             <div class="lenovo-pc-group col-3 pt-1">
                 <img class="group-img" src="./img/remote-4.png" alt="">
                 <h3>社内報</h3>
-                <p>会社のイマを伝えるデジタル社内報は組織の一体感を醸成します。</p>
+                <p>会社のイマを伝えるデジタル社内報は組<br>織の一体感を醸成します。</p>
             </div>
         </div>
         <div class="row main-bg-color px-5">
