Image replaced and font fixed

--- a/index.html
+++ b/index.html
@@ -453,6 +453,8 @@
 
         h2{
             font-size: 28px;
+            font-weight: 600;
+            color: #343A40;
         }
 
         /* Fixed Cover */
@@ -510,10 +512,13 @@
         }
         .partners .desc{
             color: #707070;
+            font-weight: 100;
         }
         .main-title{
             font-size: 32px;
             padding:60px 0;
+            font-weight: 600;
+            color: #343A40;
         }
         article .article-title{
             border-left:4px solid #E2221B;
