--- a/index.html
+++ b/index.html
@@ -484,9 +484,11 @@
         }
         .header-section .header-title{
             font-size: 26px;
+            color: #FFFFFF;
+            font-weight: 500;
         }
         .header-section .header-group-img{
-            width:100%;
+            width:90%;
         }
 
     /*    partners */
@@ -677,7 +679,7 @@
                 <img class="image-full" src="./img/remote-work.png" alt="">
             </div>
         </div>
-        <div class="row main-bg-color justify-content-center">
+        <div class="row main-bg-color justify-content-center pt-3">
             <div class="col-11 pt-5 pb-5">
                 <pre class="desc-box d-flex justify-conten-center align-items-center text-center mb-0">
                     「リモートワーク、まずはWeb会議から始めたい」「セキュリティも万全に」
