Font stylling changes

--- a/index.html
+++ b/index.html
@@ -594,6 +594,7 @@
             color: #707070;
             text-align: center;
             padding-top: 25px;
+            font-weight: 600;
         }
 
         .lenovo-pc-group p{
@@ -741,11 +742,11 @@
                     </div>
                     <div class="col-6">
                         <ul class="ml-3">
-                            <li>米沢生産モデル（最短5営業日で納品） 選択可能 </li>
+                            <li style="font-weight: bold;">米沢生産モデル（最短5営業日で納品） 選択可能 </li>
                             <li>プロセッサー：インテル Core i7-10710U プロセッサー (1.10GHz, 12MB) 選択可能 </li>
                             <li>初期導入OS：Windows 10 Pro 64 bit 選択可能</li>
-                            <li class="red-color">Microsoft Office Personal 2019 選択可能 </li>
-                            <li class="red-color">Microsoft Office Home and Business 2019 選択可能 </li>
+                            <li class="red-color" style="font-weight: bold;">Microsoft Office Personal 2019 選択可能 </li>
+                            <li class="red-color" style="font-weight: bold;">Microsoft Office Home and Business 2019 選択可能 </li>
                             <li>ディスプレイ：14.0型WQHD液晶 (2560 x 1440 WVA 300nit) 光沢なし 選択可能</li>
                             <li>メモリー：最大16GB </li>
                             <li>ストレージ：最大2TB SSD </li>
@@ -775,13 +776,13 @@
                     <div class="article-title mb-4">
                         <h2 class="title">Lenovo PCとセットになったリモートワーク機能</h2>
                     </div>
-                    <p class="sub-title-content pt-4">遠隔でも、社員とのコミュニケーションをはじめ情報共有や会議、取引先との商談など<br> 業務のキホンをオフィスと同じように安全・快適に行えます。                    </p>
+                    <p class="sub-title-content pt-4" style="font-weight: bold;">遠隔でも、社員とのコミュニケーションをはじめ情報共有や会議、取引先との商談など<br> 業務のキホンをオフィスと同じように安全・快適に行えます。                    </p>
                 </div>
             <div class="col-6 pb-5">
                 <img class="lenovo-pc" src="./img/lenovo-pc.png" alt="">
             </div>
             <div class="col-6 pb-5 main-color">
-                <h3 class="mb-4" style="font-size: 13px;">Microsoft Teams 活用編（動画で見る活用ガイド）</h3>
+                <h3 class="mb-4" style="font-size: 13px; font-weight: bold;">Microsoft Teams 活用編（動画で見る活用ガイド）</h3>
                 <p  class="mb-5" style="font-size: 13px;line-height: 2;">Microsoft 365 がいつでもどこでもあなたをサポート。 <br>
                     Microsoft Teams で いつでもチームメンバーと連携できるから、 <br>
                     外回りの業務もスマートに。</p>
@@ -824,10 +825,10 @@
         </div>
         <div class="row main-bg-color px-5">
             <div class="col-12 pb-4">
-                <div class="article-title mb-4">
+                <div class="article-title mb-4 mt-5">
                     <h2 class="title">Lenovo PCに追加できるリモートワーク機能</h2>
                 </div>
-                <p class="sub-title-content pt-4">テレワークが進むにつれて顕在化されやすい「社内の情報共有」「リモートマネジメント」「組織の一体感」<br>
+                <p class="sub-title-content pt-4" style="font-weight: bold;">テレワークが進むにつれて顕在化されやすい「社内の情報共有」「リモートマネジメント」「組織の一体感」<br>
                     などの課題を解決する、Microsoft365 と連携したクラウドサービスが追加できます。</p>
             </div>
             <div class="lenovo-pc-group col-3 pt-1">
