--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
 
         /* Fixed Cover */
         .bg-cover{
-            background-image: url("./img/top-background.png");
+            background-image: url("./img/jp_lenovopro_remoteworkstarterplan_1920x400.png");
             background-size: cover;
             position:fixed;
             top:40px;
@@ -677,7 +677,7 @@
                 </div>
             </div>
             <div class="col-6 p-0">
-                <img class="image-full" src="./img/remote-work.png" alt="">
+                <img class="image-full" src="./img/jp_lenovopro_remoteworkstarterplan_1200x400.png" alt="">
             </div>
         </div>
         <div class="row main-bg-color justify-content-center pt-3">
@@ -859,7 +859,7 @@
                         <b>中小企業のためのテレワークガイド</b><br>テレワークに必要な基礎知識はこの1冊でOK。メリットや導入方法をご紹介します。
                     </div>
                     <div class="ml-auto px-3">
-                        <button class="lenovo-btn d-flex justify-content-around align-items-center">  <svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="arrow-alt-circle-right" class="svg-inline--fa fa-arrow-alt-circle-right fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M504 256C504 119 393 8 256 8S8 119 8 256s111 248 248 248 248-111 248-248zm-448 0c0-110.5 89.5-200 200-200s200 89.5 200 200-89.5 200-200 200S56 366.5 56 256zm72 20v-40c0-6.6 5.4-12 12-12h116v-67c0-10.7 12.9-16 20.5-8.5l99 99c4.7 4.7 4.7 12.3 0 17l-99 99c-7.6 7.6-20.5 2.2-20.5-8.5v-67H140c-6.6 0-12-5.4-12-12z"></path></svg> PDFはこちら</button>
+                       <a target="_blank" href="https://static.lenovo.com/jp/pages/lenovopro/20200727/telework_guide.pdf?_fsi=FyY3UzEV&fbclid=IwAR1rpJRYpMeEvpGlwZmFCFvHtJ8SXTvLQ_0ZTUnqTXVUlAawRAlXV8vhrwI"><button class="lenovo-btn d-flex justify-content-around align-items-center">  <svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="arrow-alt-circle-right" class="svg-inline--fa fa-arrow-alt-circle-right fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M504 256C504 119 393 8 256 8S8 119 8 256s111 248 248 248 248-111 248-248zm-448 0c0-110.5 89.5-200 200-200s200 89.5 200 200-89.5 200-200 200S56 366.5 56 256zm72 20v-40c0-6.6 5.4-12 12-12h116v-67c0-10.7 12.9-16 20.5-8.5l99 99c4.7 4.7 4.7 12.3 0 17l-99 99c-7.6 7.6-20.5 2.2-20.5-8.5v-67H140c-6.6 0-12-5.4-12-12z"></path></svg> PDFはこちら</button></a>
                     </div>
             </div>
         </div>
